[api] add api entity and write swagger api sample
