# x-api/src/apientities/celery.entity.go
@@ -1,0 +1,5 @@
+package apientities
+
+type CeleryStatus struct {
+	TaskId string `json:"task_id" example:"550e8400-e29b-41d4-a716-446655440000" format:"string"`
+}
