# x-api/src/routes/routes.go
@@ -14,16 +14,18 @@ func SetupRoutes() *gin.Engine {
 		c.JSON(http.StatusOK, gin.H{"data": "hello world"})
 	})
 
-	// API AND V1 ********************************************************************************
 	api := r.Group("/api")
 	v1 := api.Group("v1")
 
-	// HOME PAGE**********************************************************************************
+	celery := v1.Group("celery")
+	{
+		celery.GET("status/:task_id", controllers.StatusCelery)
+	}
+
 	ml := v1.Group("ml")
 	{
 		ml.POST("face/detection", controllers.FaceDeteaction)
 		ml.POST("face/recognition", controllers.FaceRecognition)
-		ml.GET("face/:task_id", controllers.StatusCelery)
 	}
 
 	return r
